--- a/style.css
+++ b/style.css
@@ -3,25 +3,11 @@
             animation-duration: 3s;
             font-family: Arial,Sans-Serif,"Segoe UI";
         }
-        #reloadbutton{
-            animation-name: slide;
-            animation-duration: 4s;
-            width: 105px;
-            height: 40px;
-            transition: all 5s ease;
-            border-radius: 10px;
-            border: none;
-            background-color: lightblue;
-        }
-        #button:hover{
-            background-color: blue;
-            border: 3px solid black;
-            cursor: pointer;
-        }
+        
         @keyframes slide {
             from{transform: translateX(1250%)}
         }
-        #generateButton{
+        .button{
             animation-name: slide;
             animation-duration: 4s;
             width: 105px;
@@ -31,7 +17,7 @@
             border: none;
             background-color: lightblue;
         }
-        #generateButton:hover{
+        .button:hover{
             background-color: blue;
             border: 3px solid black;
             cursor: pointer;
